Run zstd checks against all operating systems

--- a/.github/workflows/__zstd-bundle-fallback.yml
+++ b/.github/workflows/__zstd-bundle-fallback.yml
@@ -27,6 +27,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - os: macos-latest
+            version: linked
+          - os: windows-latest
+            version: linked
           - os: ubuntu-latest
             version: linked
     name: Zstandard bundle fallback
