--- a/pr-checks/checks/zstd-bundle-fallback.yml
+++ b/pr-checks/checks/zstd-bundle-fallback.yml
@@ -3,6 +3,8 @@ description: "Tests the fallback for when downloading a Zstandard-compressed Cod
 versions:
   - linked
 operatingSystems:
+  - macos
+  - windows
   - ubuntu
 env:
   CODEQL_ACTION_ZSTD_BUNDLE: true
