--- a/pr-checks/checks/zstd-bundle.yml
+++ b/pr-checks/checks/zstd-bundle.yml
@@ -3,6 +3,8 @@ description: "Tests the feature flag that downloads a Zstandard-compressed CodeQ
 versions:
   - linked
 operatingSystems:
+  - macos
+  - windows
   - ubuntu
 env:
   CODEQL_ACTION_ZSTD_BUNDLE: true
