--- a/pr-checks/checks/zstd-bundle-fallback.yml
+++ b/pr-checks/checks/zstd-bundle-fallback.yml
@@ -11,8 +11,13 @@ env:
   CODEQL_ACTION_FORCE_ZSTD_FAILURE: true
 steps:
   - name: Remove CodeQL from toolcache
-    run: |
-      rm -rf $RUNNER_TOOL_CACHE/CodeQL
+    uses: actions/github-script@v7
+    with:
+      script: |
+        const fs = require('fs');
+        const path = require('path');
+        const codeqlPath = path.join(process.env['RUNNER_TOOL_CACHE'], 'CodeQL');
+        fs.rmdirSync(codeqlPath, { recursive: true });
   - id: init
     uses: ./../action/init
     with:
