Create a GitHub release for each action release
Must make sure this release is not marked as `latest` or else it will
interfere with the CLI bundle releases also included in this repo.

--- a/.github/workflows/post-release-mergeback.yml
+++ b/.github/workflows/post-release-mergeback.yml
@@ -150,3 +150,14 @@ jobs:
             --body "${pr_body}" \
             --assignee "${GITHUB_ACTOR}" \
             --draft
+
+      - name: Create the GitHub release
+        env:
+          VERSION: "${{ steps.getVersion.outputs.version }}"
+        run: |
+          # Do not mark this release as latest. The most recent CLI release must be marked as latest.
+          gh release create \
+            "${VERSION}" \
+            --latest=false \
+            -t "${VERSION}" \
+            -F CHANGELOG.md
