--- a/pr-checks/checks/zstd-bundle.yml
+++ b/pr-checks/checks/zstd-bundle.yml
@@ -5,6 +5,7 @@ versions:
 operatingSystems:
   - macos
   - ubuntu
+  - windows
 env:
   CODEQL_ACTION_ZSTD_BUNDLE: true
 steps:
@@ -58,8 +59,10 @@ steps:
         const toolsUrl = downloadTelemetryNotifications[0].properties.attributes.toolsUrl;
         console.log(`Found tools URL: ${toolsUrl}`);
 
-        if (!toolsUrl.endsWith('.tar.zst')) {
+        const expectedExtension = process.env['RUNNER_OS'] === 'Windows' ? '.tar.gz' : '.tar.zst';
+
+        if (!toolsUrl.endsWith(expectedExtension)) {
           core.setFailed(
-            `Expected the tools URL to be a .tar.zst file, but found ${toolsUrl}.`
+            `Expected the tools URL to be a ${expectedExtension} file, but found ${toolsUrl}.`
           );
         }
