--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'CodeQL: Stub'
-description: "Stub: Don\'t use this action directly. Read [the documentation](https://docs.github.com/en/code-security/code-scanning/introduction-to-code-scanning/about-code-scanning-with-codeql) instead."
+description: "Stub: Don't use this action directly. Read [the documentation](https://docs.github.com/en/code-security/code-scanning/introduction-to-code-scanning/about-code-scanning-with-codeql) instead."
 author: 'GitHub'
 runs:
   using: 'composite'
