--- a/pr-checks/checks/zstd-bundle.yml
+++ b/pr-checks/checks/zstd-bundle.yml
@@ -16,7 +16,9 @@ steps:
         const fs = require('fs');
         const path = require('path');
         const codeqlPath = path.join(process.env['RUNNER_TOOL_CACHE'], 'CodeQL');
-        fs.rmdirSync(codeqlPath, { recursive: true });
+        if (codeqlPath !== undefined) {
+          fs.rmdirSync(codeqlPath, { recursive: true });
+        }
   - id: init
     uses: ./../action/init
     with:
