--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "description": "CodeQL action",
   "scripts": {
-    "build": "tsc --build",
+    "build": "npm ci && tsc --build && npm run package",
+    "package": "bash .github/workflows/script/package.sh",
     "test": "ava src/**.test.ts --serial --verbose",
     "test-debug": "ava src/**.test.ts --serial --verbose --timeout=20m",
     "lint": "eslint --report-unused-disable-directives --max-warnings=0 .",
     "lint-fix": "eslint --report-unused-disable-directives --max-warnings=0 . --fix",
-    "lint-ci": "SARIF_ESLINT_IGNORE_SUPPRESSED=true eslint --report-unused-disable-directives --max-warnings=0 . --format @microsoft/eslint-formatter-sarif --output-file=eslint.sarif",
-    "removeNPMAbsolutePaths": "removeNPMAbsolutePaths . --force"
+    "lint-ci": "SARIF_ESLINT_IGNORE_SUPPRESSED=true eslint --report-unused-disable-directives --max-warnings=0 . --format @microsoft/eslint-formatter-sarif --output-file=eslint.sarif"
   },
   "ava": {
     "typescript": {
@@ -75,6 +75,7 @@
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "ava": "^5.3.1",
+    "esbuild": "^0.24.0",
     "eslint": "^8.57.1",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-filenames": "^1.3.2",
@@ -83,7 +84,6 @@
     "eslint-plugin-no-async-foreach": "^0.1.1",
     "micromatch": "4.0.8",
     "nock": "^13.5.6",
-    "removeNPMAbsolutePaths": "3.0.1",
     "sinon": "^19.0.2",
     "typescript": "^5.6.3"
   },
