--- a/start-proxy/action.yml
+++ b/start-proxy/action.yml
@@ -21,5 +21,5 @@ outputs:
     description: The proxy's internal CA certificate in PEM format
 runs:
   using: node20
-  main: "../lib/start-proxy-action.js"
-  post: "../lib/start-proxy-action-post.js"
+  main: "start-proxy-action.js"
+  post: "start-proxy-action-post.js"
