--- a/.github/workflows/__extract-direct-to-toolcache.yml
+++ b/.github/workflows/__extract-direct-to-toolcache.yml
@@ -69,6 +69,22 @@ jobs:
         with:
           output: ${{ runner.temp }}/results
           upload-database: false
+      - name: Install @actions/tool-cache
+        run: npm install @actions/tool-cache
+      - name: Check CodeQL is installed within the toolcache
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const toolcache = require('@actions/tool-cache');
+            const allCodeqlVersions = toolcache.findAllVersions('CodeQL');
+            console.log(`Found CodeQL versions: ${allCodeqlVersions}`);
+            if (allCodeqlVersions.length === 0) {
+              throw new Error('CodeQL not found in toolcache');
+            }
+            if (allCodeqlVersions.length > 1) {
+              throw new Error('Multiple CodeQL versions found in toolcache');
+            }
+            console.log(`CodeQL version: ${allCodeqlVersions[0]}`);
     env:
       CODEQL_ACTION_EXTRACT_TOOLCACHE: true
       CODEQL_ACTION_ZSTD_BUNDLE: true
