--- a/pr-checks/checks/extract-direct-to-toolcache.yml
+++ b/pr-checks/checks/extract-direct-to-toolcache.yml
@@ -26,3 +26,19 @@ steps:
     with:
       output: ${{ runner.temp }}/results
       upload-database: false
+  - name: Install @actions/tool-cache
+    run: npm install @actions/tool-cache
+  - name: Check CodeQL is installed within the toolcache
+    uses: actions/github-script@v7
+    with:
+      script: |
+        const toolcache = require('@actions/tool-cache');
+        const allCodeqlVersions = toolcache.findAllVersions('CodeQL');
+        console.log(`Found CodeQL versions: ${allCodeqlVersions}`);
+        if (allCodeqlVersions.length === 0) {
+          throw new Error('CodeQL not found in toolcache');
+        }
+        if (allCodeqlVersions.length > 1) {
+          throw new Error('Multiple CodeQL versions found in toolcache');
+        }
+        console.log(`CodeQL version: ${allCodeqlVersions[0]}`);
