--- a/.github/workflows/__extract-direct-to-toolcache.yml
+++ b/.github/workflows/__extract-direct-to-toolcache.yml
@@ -31,6 +31,8 @@ jobs:
             version: linked
           - os: ubuntu-latest
             version: linked
+          - os: windows-latest
+            version: linked
     name: Extract directly to toolcache
     permissions:
       contents: read
@@ -96,5 +98,4 @@ jobs:
             }
     env:
       CODEQL_ACTION_EXTRACT_TOOLCACHE: true
-      CODEQL_ACTION_ZSTD_BUNDLE: true
       CODEQL_ACTION_TEST_MODE: true
