--- a/pr-checks/checks/extract-direct-to-toolcache.yml
+++ b/pr-checks/checks/extract-direct-to-toolcache.yml
@@ -5,9 +5,9 @@ versions:
 operatingSystems:
   - macos
   - ubuntu
+  - windows
 env:
   CODEQL_ACTION_EXTRACT_TOOLCACHE: true
-  CODEQL_ACTION_ZSTD_BUNDLE: true
 steps:
   - name: Remove CodeQL from toolcache
     uses: actions/github-script@v7
