--- a/pr-checks/checks/test-proxy.yml
+++ b/pr-checks/checks/test-proxy.yml
@@ -1,6 +1,6 @@
 name: "Proxy test"
 description: "Tests using a proxy specified by the https_proxy environment variable"
-versions: ["linked"]
+versions: ["linked", "nightly-latest"]
 operatingSystems: ["ubuntu"]
 container:
   image: ubuntu:22.04
