ci: add capability to handle container initialisation steps to sync.py

--- a/.github/workflows/__test-proxy.yml
+++ b/.github/workflows/__test-proxy.yml
@@ -38,16 +38,6 @@ jobs:
     timeout-minutes: 45
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Setup Python on macOS
-        uses: actions/setup-python@v5
-        if: runner.os == 'macOS' && matrix.version == 'stable-v2.14.6'
-        with:
-          python-version: '3.11'
-      - name: Check out repository
-        uses: actions/checkout@v4
-        env:
-          https_proxy: http://squid-proxy:3128
-          CODEQL_ACTION_TEST_MODE: true
       - name: Set up GitHub CLI
         run: |
           apt update
@@ -56,6 +46,14 @@ jobs:
           apt-key add /usr/share/keyrings/githubcli-archive-keyring.gpg
           apt-add-repository https://cli.github.com/packages
           apt install -y gh
+        env: {}
+      - name: Setup Python on macOS
+        uses: actions/setup-python@v5
+        if: runner.os == 'macOS' && matrix.version == 'stable-v2.14.6'
+        with:
+          python-version: '3.11'
+      - name: Check out repository
+        uses: actions/checkout@v4
       - name: Prepare test
         id: prepare-test
         uses: ./.github/actions/prepare-test
@@ -63,20 +61,14 @@ jobs:
           version: ${{ matrix.version }}
           use-all-platform-bundle: 'false'
           setup-kotlin: 'false'
-        env:
-            https_proxy: http://squid-proxy:3128
-            CODEQL_ACTION_TEST_MODE: true
       - uses: ./../action/init
         with:
           languages: javascript
           tools: ${{ steps.prepare-test.outputs.tools-url }}
-        env:
-          https_proxy: http://squid-proxy:3128
-          CODEQL_ACTION_TEST_MODE: true
       - uses: ./../action/analyze
-        env:
-          https_proxy: http://squid-proxy:3128
-          CODEQL_ACTION_TEST_MODE: true
+    env:
+      https_proxy: http://squid-proxy:3128
+      CODEQL_ACTION_TEST_MODE: true
     container:
       image: ubuntu:22.04
       options: --dns 8.8.8.8
