--- a/pr-checks/checks/test-proxy.yml
+++ b/pr-checks/checks/test-proxy.yml
@@ -4,7 +4,17 @@ versions: ["linked", "nightly-latest"]
 operatingSystems: ["ubuntu"]
 container:
   image: ubuntu:22.04
-  options: --dns 127.0.0.1
+  options: --dns 8.8.8.8
+container-init-steps:
+  name: Set up GitHub CLI
+  run: |
+    apt update
+    apt install -y curl libreadline8 gnupg2 software-properties-common zstd
+    curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+    apt-key add /usr/share/keyrings/githubcli-archive-keyring.gpg
+    apt-add-repository https://cli.github.com/packages
+    apt install -y gh
+  env: {}
 services:
   squid-proxy:
     image: ubuntu/squid:latest
