Add token information

--- a/start-proxy/action.yml
+++ b/start-proxy/action.yml
@@ -12,6 +12,10 @@ inputs:
   proxy_password:
     required: false
     description: The password of the proxy
+  token:
+    description: GitHub token to use for authenticating with this instance of GitHub, used to upload debug artifacts.
+    default: ${{ github.token }}
+    required: false
 outputs:
   proxy_host:
     description: The IP address of the proxy
