Fix typo'd input name

--- a/.github/workflows/__start-proxy.yml
+++ b/.github/workflows/__start-proxy.yml
@@ -63,7 +63,7 @@ jobs:
         id: proxy
         uses: ./../action/start-proxy
         with:
-          registries_secrets: '[{ "type": "nuget_feed", "url": "https://api.nuget.org/v3/index.json"
+          registry_secrets: '[{ "type": "nuget_feed", "url": "https://api.nuget.org/v3/index.json"
             }]'
     env:
       CODEQL_ACTION_TEST_MODE: true
