Print proxy step outputs

--- a/.github/workflows/__start-proxy.yml
+++ b/.github/workflows/__start-proxy.yml
@@ -65,5 +65,11 @@ jobs:
         with:
           registry_secrets: '[{ "type": "nuget_feed", "url": "https://api.nuget.org/v3/index.json"
             }]'
+
+      - name: Print proxy outputs
+        run: |
+          echo "${{ steps.proxy.outputs.proxy_host }}"
+          echo "${{ steps.proxy.outputs.proxy_port }}"
+          echo "${{ steps.proxy.outputs.proxy_urls }}"
     env:
       CODEQL_ACTION_TEST_MODE: true
