Fail start-proxy PR check if outputs are not set

--- a/.github/workflows/__start-proxy.yml
+++ b/.github/workflows/__start-proxy.yml
@@ -71,5 +71,10 @@ jobs:
           echo "${{ steps.proxy.outputs.proxy_host }}"
           echo "${{ steps.proxy.outputs.proxy_port }}"
           echo "${{ steps.proxy.outputs.proxy_urls }}"
+
+      - name: Fail if proxy outputs are not set
+        if: (!steps.proxy.outputs.proxy_host) || (!steps.proxy.outputs.proxy_port)
+          || (!steps.proxy.outputs.proxy_ca_certificate) || (!steps.proxy.outputs.proxy_urls)
+        run: exit 1
     env:
       CODEQL_ACTION_TEST_MODE: true
