--- a/pr-checks/checks/start-proxy.yml
+++ b/pr-checks/checks/start-proxy.yml
@@ -19,3 +19,7 @@ steps:
       echo "${{ steps.proxy.outputs.proxy_host }}"
       echo "${{ steps.proxy.outputs.proxy_port }}"
       echo "${{ steps.proxy.outputs.proxy_urls }}"
+
+  - name: Fail if proxy outputs are not set
+    if: (!steps.proxy.outputs.proxy_host) || (!steps.proxy.outputs.proxy_port) || (!steps.proxy.outputs.proxy_ca_certificate) || (!steps.proxy.outputs.proxy_urls)
+    run: exit 1
