--- a/.github/workflows/__multi-language-autodetect.yml
+++ b/.github/workflows/__multi-language-autodetect.yml
@@ -27,10 +27,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-13
-            version: stable-v2.14.6
-          - os: ubuntu-latest
-            version: stable-v2.14.6
           - os: macos-latest
             version: stable-v2.15.5
           - os: ubuntu-latest
@@ -47,6 +43,10 @@ jobs:
             version: stable-v2.18.4
           - os: ubuntu-latest
             version: stable-v2.18.4
+          - os: macos-latest
+            version: stable-v2.19.4
+          - os: ubuntu-latest
+            version: stable-v2.19.4
           - os: macos-latest
             version: default
           - os: ubuntu-latest
@@ -88,15 +88,12 @@ jobs:
         id: init
         with:
           db-location: ${{ runner.temp }}/customDbLocation
-      # Swift is not supported on Ubuntu or codeql 2.14 so we manually exclude it from the list here
-          languages: ${{ (runner.os == 'Linux' || (runner.os == 'macOS' && matrix.version
-            == 'stable-v2.14.6')) && 'cpp,csharp,go,java,javascript,python,ruby' ||
-            '' }}
+          languages: ${{ runner.os == 'Linux' && 'cpp,csharp,go,java,javascript,python,ruby'
+            || '' }}
           tools: ${{ steps.prepare-test.outputs.tools-url }}
 
       - uses: ./../action/.github/actions/setup-swift
-    # Exclude macos on v2.14.6 since we can not longer run swift on ARM runners
-        if: runner.os == 'macOS' && matrix.version != 'stable-v2.14.6'
+        if: runner.os == 'macOS'
         with:
           codeql-path: ${{ steps.init.outputs.codeql-path }}
 
@@ -149,8 +146,7 @@ jobs:
           fi
 
       - name: Check language autodetect for Swift on macOS
-    # Exclude macos on v2.14.6 since we can not longer run swift on ARM runners
-        if: runner.os == 'macOS' && matrix.version != 'stable-v2.14.6'
+        if: runner.os == 'macOS'
         shell: bash
         run: |
           SWIFT_DB=${{ fromJson(steps.analysis.outputs.db-locations).swift }}
